Thu May  9 20:02:10 2002  Douglas C. Schmidt  <schmidt@tango.doc.wustl.edu>

	* docs/ACE-bug-process.html: Fixed a typo in the hostname of
	  the TAO FAQ.  Thanks to Jeff Adams <Jeff.Adams@gd-ais.com>
	  for reporting this.

Thu May  9 16:26:48 2002  Nanbor Wang  <nanbor@cs.wustl.edu>

	* ACEXML/examples/SAXPrint/main.cpp: Added missing include file.

	* ace/Service_Config.cpp:
	* ace/Service_Config.h:
	* ace/Svc_Conf.y:
	* ace/Svc_Conf_y.cpp: Consolidated ace_create_service_type into
	  ACE_Service_Config::create_service_type_impl.


Thu May  9 14:35:24 2002  Nanbor Wang  <nanbor@cs.wustl.edu>

	* ace/XML_Svc_Conf.h: Changed to include ACE_export.h instead of
	  config-all.h and added #pragma once macros.

Thu May 09 12:12:59 2002  Nanbor Wang  <nanbor@cs.wustl.edu>

	* ACEXML/apps/svcconf/Svcconf.h:
	* ACEXML/apps/svcconf/Svcconf.cpp:
	* ACEXML/apps/svcconf/Svcconf_Handler.h:
	* ACEXML/apps/svcconf/Svcconf_Handler.cpp: Commented out the code
	  if XML-based Service Configurator is not used.

	* ACEXML/apps/svcconf/Makefile:
	* ACEXML/apps/svcconf/XML_Svc_Conf_Parser.dsp: Removed ACEXML from
	  the list of include path to be consistent with other projects.

Thu May 09 10:53:51 2002  Nanbor Wang  <nanbor@cs.wustl.edu>

	* ACEXML/common/XML_Common.dsp: One more mis-merged project file.

Thu May 09 10:39:17 2002  Nanbor Wang  <nanbor@cs.wustl.edu>

	* ace/ace_dll.dsp:
	* ace/ace_lib.dsp: Fixed link error on win32.  I forgot to merge
	  these project files differently (they can not be merged.)

Thu May  9 01:07:56 2002  Nanbor Wang  <nanbor@cs.wustl.edu>

	* ACEXML/common/StrCharStream.h:
	* ACEXML/common/StrCharStream.cpp: Fixed Linux compilation
	  errors.

Thu May 09 00:38:22 2002  Irfan Pyarali  <irfan@cs.wustl.edu>

	* ace/WFMO_Reactor.cpp (event_handling): Added a fix for bug
	  1161. The problem was described aptly and the fix was applied
	  exactly as suggested by Lyn Headley <headley@wolve.com>:

	  Problem: "The do-while loop in this function is problematic,